# SightReader

./: .gitignore  README.md  pyproject.toml
.agents/skills/sheet-playback/: SKILL.md
corrections/: DirtyChompers_Trumpet.json
src/sightreader/: __init__.py  cli.py  corrections.py  instruments.py  midi.py  pdf.py  pipeline.py  tools.py  web.py
tests/: test_corrections.py  test_instruments.py  test_midi.py  test_pdf.py
web/: app.js  index.html  styles.css
