[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sightreader"
version = "0.1.0"
description = "Turn sheet music into playable audio using local OMR and synthesis tools."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sightreader = "sightreader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
